--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="title_add">Add</string>
     <string name="title_report">Report</string>
     <string name="title_profile">Profile</string>
-    <string name="pick_date">dd/mm/yy</string>
+    <string name="pick_date">yyyy/mm/dd</string>
 
     <string-array name="category">
         <item>Food and Beverage</item>
